docs/ingress-gateway-asm-manifests/base/deployment-service.yaml
# [START servicemesh_base_deployment_service_deployment_asm_ingressgateway]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asm-ingressgateway
spec:
  selector:
    matchLabels:
      asm: ingressgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        asm: ingressgateway
    spec:
      containers:
      - name: istio-proxy
        image: auto
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1337
        runAsGroup: 1337
        runAsNonRoot: true
        runAsUser: 1337
      serviceAccountName: asm-ingressgateway
# [END servicemesh_base_deployment_service_deployment_asm_ingressgateway]
---
# [START servicemesh_base_deployment_service_service_asm_ingressgateway]
apiVersion: v1
kind: Service
metadata:
  name: asm-ingressgateway
  labels:
    asm: ingressgateway
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    asm: ingressgateway
  type: LoadBalancer
# [END servicemesh_base_deployment_service_service_asm_ingressgateway]
